main_ui/k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedding-frontend-deployment
spec:
  selector:
    matchLabels:
      app: wedding-frontend
  template:
    metadata:
      labels:
        app: wedding-frontend
    spec:
      containers:
      - name: wedding-frontend
        image: wedding-front
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
