main_ui/k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-frontend-service
spec:
  selector:
    app: wedding-frontend
  ports:
  - port: 80
    targetPort: 3000
